<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dermatologist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there">HI, THERE !</string>
    <string name="save_your_skin">Save your skin</string>
    <string name="we_will_help_nyou_diagnose_na_skin_disease">We  will  help\nyou  diagnose\na skin  disease</string>
    <string name="check">Check</string>
    <string name="categories">TOP CATEGORIES</string>
    <string name="welcome">welcome</string>
    <string name="back">Back!</string>


    <string name="hey">WELCOME IN DERMA</string>
    <string name="onedesc" tools:ignore="MissingTranslation">We Take Care Of Your Skin</string>

    <string name="onboardtwo" tools:ignore="MissingTranslation">"DERMA IS DESIGNED TO HELP

  CLEAR UP SKIN PROBLEMS

     INSTANTLY"</string>
    <string name="twodesc" tools:ignore="MissingTranslation">So you can always feel confident in your own skin</string>

    <string name="onboardthree" tools:ignore="MissingTranslation">DIAGNOSIS</string>
    <string name="threedesc" tools:ignore="MissingTranslation">"DERMA offers innovative diagnostics that helps

 you monitor your skin health and detect any

 unusual or alert skin conditions so you can

 avoid unwanted consequences.."</string>

    <string name="onboardfour" tools:ignore="MissingTranslation">SKIN CARE</string>
    <string name="fourdesc" tools:ignore="MissingTranslation">"Derma offers skin care for all skin types in

 different seasons of the year and suggests

 the best products to take care of your skin."</string>

    <string name="onboardfive" tools:ignore="MissingTranslation">HERBAL REMADY</string>
    <string name="fivedesc" tools:ignore="MissingTranslation">"Derma offers tips for all skin types in different

seasons of the year and suggests the best

herbal recipes to take care of your skin."</string>

    <string name="onboardsix" tools:ignore="MissingTranslation">TREATMENTS</string>
    <string name="sixdesc" tools:ignore="MissingTranslation">"Derma provides express delivery service for all
orders.

Our goal is always to provide the best service to
our customers and deliver orders as quickly as
  possible, but delivery time may vary based on:

*Request time relative to working hours , The
duration varies from city to city ,Traffic
 conditions and peak times.
*The type and quantity of items required and
        their availability in pharmacies.
*Customer response speed with the delivery
        captain and site dispatch."</string>

    <string name="onboardseven" tools:ignore="MissingTranslation">About Us</string>
    <string name="sevendesc" tools:ignore="MissingTranslation">"it’s not just your link to a range of impeccable and diverse local products produced by highly qualified beauty experts, but it’s also an opportunity for you to broaden your horizons and simply feel great about yourself.We began its journey as an idea that simplified the often-intimidating beauty world.Derma transitioned and became the first Egyptian beauty e-commerce company, focusing on local and price-friendly products for all of your beauty needs. Our platform features over 90 brands, and over 3,500 products, making it a go-to in the Egyptian beauty industry. The main ethos of our site is to inspire the everyday Egyptian woman and encourage her to elevate her life and make the right beauty choices. We’re glad you’ve decided to go with us for your skincare, haircare or makeup fix, and invite you to transform the way you see self-care – once and for all!"</string>



    <string name="forget_password" tools:ignore="MissingTranslation">Forget Password?</string>
    <string name="email" tools:ignore="MissingTranslation">Email</string>
    <string name="send" tools:ignore="MissingTranslation">Send</string>

    <string name="enter_your_email_address_associated_with_your_account" tools:ignore="MissingTranslation">Enter Your Email Address Associated With Your Account.</string>
    <string name="hey_again" tools:ignore="MissingTranslation">Hey! Good to see you again.</string>
    <string name="mail" tools:ignore="MissingTranslation">Email</string>
    <string name="pass" tools:ignore="MissingTranslation">Password</string>
    <string name="forget_pass" tools:ignore="MissingTranslation">Forget Password?</string>
    <string name="signin" tools:ignore="MissingTranslation">Login</string>
    <string name="don_t_have_account" tools:ignore="MissingTranslation">Don’t Have Account?</string>
    <string name="new_password" tools:ignore="MissingTranslation">New Password</string>
    <string name="sign_up" tools:ignore="MissingTranslation">Sign up</string>
    <string name="we_are_happy_to_see_you_here" tools:ignore="MissingTranslation">We are happy to see you here!</string>
    <string name="first_name" tools:ignore="MissingTranslation">First Name</string>
    <string name="last_name" tools:ignore="MissingTranslation">Last Name</string>
    <string name="emai" tools:ignore="MissingTranslation">Email</string>
    <string name="passwo" tools:ignore="MissingTranslation">Password</string>
    <string name="confirm_password" tools:ignore="MissingTranslation">Confirm Password</string>
    <string name="phone_number" tools:ignore="MissingTranslation">Phone Number</string>
    <string name="address" tools:ignore="MissingTranslation">Address</string>
    <string name="register" tools:ignore="MissingTranslation">Register</string>
    <string name="pay_egp19_52_using" tools:ignore="MissingTranslation">Pay EGP19,52 using</string>
    <string name="card_information" tools:ignore="MissingTranslation">Card information</string>
    <string name="card_number" tools:ignore="MissingTranslation">Card number</string>
    <string name="mm_yy" tools:ignore="MissingTranslation">MM / YY</string>
    <string name="cvc" tools:ignore="MissingTranslation">CVC</string>
    <string name="country_or_region" tools:ignore="MissingTranslation">Country or region</string>
    <string name="country" tools:ignore="MissingTranslation">Country</string>
    <string name="zip" tools:ignore="MissingTranslation">ZIP</string>
    <string name="pay_egp19_52" tools:ignore="MissingTranslation">Pay EGP19.52</string>
    <string name="derma_nkeep_your_skin_clear" tools:ignore="MissingTranslation">Derma\nKeep your skin clear</string>
    <string name="medicines" tools:ignore="MissingTranslation">Medicines</string>
    <string name="you_can_get_medicines_for_all_skin_types" tools:ignore="MissingTranslation">You can get Medicines for all skin types.</string>
    <string name="skincare" tools:ignore="MissingTranslation">Skincare</string>
    <string name="you_can_get_skincare_for_maintaining_skin_integrity" tools:ignore="MissingTranslation">You can get Skincare for Maintaining skin integrity.</string>
    <string name="herbs" tools:ignore="MissingTranslation">Herbs</string>
    <string name="you_can_get_useful_herbs_for_skin_care" tools:ignore="MissingTranslation">You can get Useful herbs for skin care.</string>
    <string name="click_on_the_camera_to_n_take_or_upload_image" tools:ignore="MissingTranslation">Click on the camera to \n Take or Upload Image</string>
    <string name="result" tools:ignore="MissingTranslation">Result</string>
    <string name="next" tools:ignore="MissingTranslation">Next</string>
    <string name="pay_egp" tools:ignore="MissingTranslation">Pay EGP19.52</string>
    <string name="account_info" tools:ignore="MissingTranslation">Account Info</string>
    <string name="name">Name</string>
    <string name="your_name" tools:ignore="MissingTranslation">your name</string>
    <string name="mobile" tools:ignore="MissingTranslation">Mobile</string>
    <string name="your_phone" tools:ignore="MissingTranslation">your phone</string>
    <string name="maiilll" tools:ignore="MissingTranslation">Email</string>
    <string name="your_email" tools:ignore="MissingTranslation">your Email</string>
    <string name="addressssss" tools:ignore="MissingTranslation">Address</string>
    <string name="your_address" tools:ignore="MissingTranslation">your Address</string>
    <string name="normal_skin" tools:ignore="MissingTranslation">Normal Skin</string>
    <string name="dry_skin" tools:ignore="MissingTranslation">Dry Skin</string>
    <string name="oily_skin" tools:ignore="MissingTranslation">Oily Skin</string>
    <string name="combination_n_skin">Combination Skin</string>

    <string name="hyalu" tools:ignore="MissingTranslation">HYALU COLLAGEN</string>
    <string name="Eye" tools:ignore="MissingTranslation">Eye Cream</string>
    <string name="moisturize" tools:ignore="MissingTranslation">"\nTo moisturize the area around the eye and protect\n"+" it from wrinkles and lines resulting from the dryness of the area around the eye.\n\n"+
                        "It also helps to lighten the circles around the eye and make the area around the eye brighter, livelier, and a more youthful appearance.\n\n" +
                        "Hyalu Collagen Eye Moisturizing Cream is enriched with caffeine, hyaluronic acid and marine collagen.\n\n" +
                        "I mean, it will be very suitable for moisturizing and nourishing an area under the eye, and resisting wrinkles, fine lines, dark circles and bloating.\n\n" +
                        "I mean, if you suffer from circles, we will know the cause and treat it with the use of the cream, which will improve the shape of the circles due to caffeine.\n\n" +
                        "And we can use it even if there are no circles for hydration and freshness due to hyaluronic acid.\n\n"</string>
    <string name="heygood">Hey good to see you again</string>

</resources>